SERVER-17250 Verify logOp listeners are rollback-safe