src/mongo/db/storage/rocks/rocks_recovery_unit.cpp
@@ -225,7 +225,9 @@ namespace mongo {
         try {
             for (Changes::const_reverse_iterator it = _changes.rbegin(), end = _changes.rend();
                     it != end; ++it) {
-                (*it)->rollback();
+                Change* change = *it;
+                LOG(2) << "CUSTOM ROLLBACK " << demangleName(typeid(*change));
+                change->rollback();
             }
             _changes.clear();
         }
